--- a/front/lib/front_web/templates/people/members/members_list.html.eex
+++ b/front/lib/front_web/templates/people/members/members_list.html.eex
@@ -32,7 +32,12 @@
           <div class="b">People</div>
         </div>
       </div>
-      <%= render "members/_add_people_button.html", conn: @conn, org_scope?: @org_scope?, permissions: @permissions %>
+      <div class="flex">
+        <%= link to: people_path(@conn, :organization_users), class: "pointer flex items-center btn-secondary btn nowrap mr2" do %>
+          <span class="material-symbols-outlined ">download</span>
+        <% end %>
+        <%= render "members/_add_people_button.html", conn: @conn, org_scope?: @org_scope?, permissions: @permissions %>
+      </div>
     </div>
 
     <div id="members">
